PYIC 3214: Changed the code according to the review comments.